--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.3.2",
     "antd": "^4.16.13",
     "axios": "^0.24.0",
+    "chart.js": "^3.6.0",
     "chart.ts": "^1.0.0",
     "html-react-parser": "^1.4.0",
     "millify": "^4.0.0",
