--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.15",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
     "antd": "^4.16.13",
-    "axios": "^0.24.0",
+    "axios": "^0.25.0",
     "chart.js": "^3.6.0",
     "chart.ts": "^1.0.0",
+    "firebase": "^9.6.3",
     "html-react-parser": "^1.4.0",
     "millify": "^4.0.0",
     "moment": "^2.29.1",
+    "mongoose": "^6.1.7",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
